--- a/class2.html
+++ b/class2.html
@@ -407,6 +407,13 @@
         margin-bottom: 20px;
 
     }
+    h3 {
+
+      color: #00ff00;
+
+      font-size: 8px;
+
+      }
 
   </style>
 
@@ -545,7 +552,7 @@
     
 
     <p class="ryel">Powered by: <a href="https://www.facebook.com/lenneth.quibuyen.9">ryeee</a>❤️</p>
-
+     <h3>10/22/2024</h3>
      <br>
 
     <div class="visitor">
